[package]
name = "aoc19"
version = "0.1.0"
authors = ["jonas <jonas-zunker@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
geo = "0.12"
id_tree = "1.7"
permutohedron = "0.2"
fallible-iterator = "0.2"
itertools = "0.8"
image  = "0.22"
num = "0.2"

[[bin]]
name = "rename"
path = "src/rename_helper.rs"
